name:                njusko
version:             0.3.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/denibertovic/njusko-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           BSD3
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Paths_njusko
  exposed-modules:     Network.Njusko.Lib
                    ,  Network.Njusko.Types
                    ,  Network.Njusko.Options
  build-depends:       base >= 4.7 && < 5
                    ,  optparse-applicative
                    ,  sqlite-simple
                    ,  text
                    ,  scalpel
                    ,  smtp-mail
                    ,  HStringTemplate
                    ,  curl
  default-language:    Haskell2010

executable njusko
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , njusko
                     , optparse-applicative
  default-language:    Haskell2010

test-suite njusko-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , njusko
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/njusko-hs
